src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_decl_meth_asm_multi_param.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class, decl methode asm
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    int iden1 (type1 iden3, type2 iden2) asm ("deuxieme test");
}