src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_method_asm_oubli_point_virg.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (missing ";")
//    
//
// Historique:
//    cree le 04/01/2023

class iden1 extends iden3{
    int iden (gloat iden) asm ("string")
}